--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title></title>
+<html lang="pt-BR">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Olá mundo</h1>
-  </body>
-</html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Olá Mundo</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="message">Olá</div>
+
+    <script src="script.js"></script>
+</body>
+  </html>
+
